--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equive="X-UA-compatible" content="IE-edge">
+    <meta http-equiv="X-UA-compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="index.js"></script>
 </head>
 <body>
     web de prueba
-    <button onclick="clickeado()">Click on me</Button></button>
+    <button onclick = "clickeado()">Click on me</Button></button>
 </body>
 </html>
